--- a/myblog/styles.css
+++ b/myblog/styles.css
@@ -279,8 +279,8 @@ footer .socials a:hover{
 .blog-toc .toc-content{
     display: none;
     position: absolute;
-    top: 0;
-    right: 100%;
+    top: 100%;
+    right: 0%;
     box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
 }
 .blog-toc .toc-content h3, 
